--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,15 @@ dependencies {
     testCompile('com.mistraltech.smog:smog-javassist:1.0.0') {
         exclude group: 'org.hamcrest'
     }
+
+    // Mockito
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
 }
 
 build.dependsOn jacocoTestReport
